Fix missing magnifier on overlap

--- a/frontend/styles/misc.scss
+++ b/frontend/styles/misc.scss
@@ -49,6 +49,7 @@
   border-width: 2px;
   position: absolute;
   background-repeat: no-repeat;
+  pointer-events: none;
   border-style: solid;
   overflow: hidden;
   visibility: hidden;
